--- a/ext/SPIRV-Cross.vcxproj.filters
+++ b/ext/SPIRV-Cross.vcxproj.filters
@@ -19,5 +19,7 @@
     <ClCompile Include="SPIRV-Cross\spirv_hlsl.cpp" />
     <ClCompile Include="SPIRV-Cross\spirv_msl.cpp" />
     <ClCompile Include="SPIRV-Cross\spirv_cross_util.cpp" />
+    <ClCompile Include="SPIRV-Cross\spirv_cross_parsed_ir.cpp" />
+    <ClCompile Include="SPIRV-Cross\spirv_parser.cpp" />
   </ItemGroup>
 </Project>
